# kafka-events-injector

./: README.md  pyproject.toml
injector/: __init__.py  consumer.py  inject_events.py
injector/resources/: input_data.csv
